manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-lb-demo
spec:
  type: NodePort
  ports:
  - name: "export-port"
    protocol: "TCP"
    port: 443
    targetPort: 50051
  selector:
    app: grpc-lb-demo
